apex-commonutils-objects/src/objects/COM_Batch_Queue__c.object
<CustomObject>
    <fields>
        <fullName>Apex_JobId__c</fullName>
        <label>Apex JobId</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Batch_Class_Name__c</fullName>
        <label>Batch Class Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Dependent_Job_List__c</fullName>
        <label>Dependent Job List</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Exception__c</fullName>
        <label>Exception Message</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Parameters_JSON__c</fullName>
        <label>Parameters JSON</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Priority__c</fullName>
        <label>Priority</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Scope__c</fullName>
        <label>Scope size</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <picklist>
            <picklistValues>
                <fullName>Waiting</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Execution</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Completed</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Error</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>On Hold</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Completed with Errors</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <label>Batch Queue</label>
    <listViews>
        <fullName>All</fullName>
        <columns>LAST_UPDATE</columns>
        <columns>OBJECT_ID</columns>
        <columns>Batch_Class_Name__c</columns>
        <columns>Status__c</columns>
        <columns>Apex_JobId__c</columns>
        <columns>Dependent_Job_List__c</columns>
        <columns>Parameters_JSON__c</columns>
        <columns>Exception__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>NAME</columns>
        <columns>Scope__c</columns>
        <columns>UPDATEDBY_USER</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>BatchQueue-{000000}</displayFormat>
        <label>Batch Queue Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Batch Queues</pluralLabel>
    <sharingModel>Read</sharingModel>
</CustomObject>